tests/invalid/invalid-015.inox
Module Invalid015

Main() :
    var X := 10 < "abc"
;
